--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,16 @@ body {
   background-color :(var)--main-color-white;
 }
 .section1{
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .logo 
 {
@@ -74,11 +83,13 @@ color:var(--main-shadows-color)
   font-weight: 600;
   text-decoration: none;
 }
+.link:hover,
+.link:focus {
+  color: var(--text-body);}
+
 .link:active {
   color: var(--main-link-color);
 }
-.link:hover {
-  color: var(--main-link-color);}
 .contacts {
   font-weight: 400;
   font-size: 16px;
@@ -122,6 +133,7 @@ color:var(--main-shadows-color)
   background-color: var(--main-link-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  font-family: inherit;
 }
 .main-butt:active {
   color: var(--main-color-white);
@@ -151,5 +163,5 @@ color:var(--main-shadows-color)
   border-radius: 4px;
 }
 .buttons-menu{
-  background-color:#E5E5E5;
+  background-color:#F4F4FD;
 }
